--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,7 @@
 {
 	"extends": [
-		"stylelint-order-config-standard"
+		"stylelint-config-standard",
+    "stylelint-config-recess-order"
 	],
 	"plugins": [
 		"stylelint-order"
