--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     }
   },
   "include": [
-    "next-env.d.ts",
+    "next-env-custom.d.ts",
+    "image.d.ts",
     "**/*.ts",
     "**/*.tsx"
   ],
