--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
+    "framer-motion": "^10.12.4",
     "html-react-parser": "^3.0.12",
     "next": "13.1.6",
     "react": "18.2.0",
